--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<!-- ========================= Página 1 ========================= -->
+<!-- ========================= Página 1: Acesso ao Site ========================= -->
 <div id="page1" class="min-h-screen flex items-center justify-center">
   <div class="glass p-10 w-full max-w-md border border-red-600/30">
     <h1 class="text-3xl font-black text-red-600 mb-6 text-center">WILLBOOT-PRO</h1>
@@ -30,136 +30,204 @@
   </div>
 </div>
 
-<!-- ========================= Página 2 ========================= -->
+<!-- ========================= Página 2: Dashboard Normal ========================= -->
 <div id="page2" class="hidden max-w-7xl mx-auto px-6 py-10">
-
-  <div class="glass p-6 flex justify-between items-center mb-6 border border-red-600/20">
+  <!-- Header -->
+  <div class="glass p-6 flex flex-col md:flex-row justify-between items-center border border-red-600/20 mb-6">
     <div id="clock2" class="text-red-500 font-bold"></div>
-    <div class="flex gap-4">
+    <div class="flex gap-4 mt-4 md:mt-0">
       <button class="btn-red" onclick="generateSignalsPage2()">🔥 GERAR SINAIS</button>
       <button class="btn-gray" onclick="logoutMain()">🚪 SAIR</button>
     </div>
   </div>
 
+  <!-- Sinais -->
   <div id="signalsPage2" class="grid md:grid-cols-3 gap-6 my-10"></div>
 
+  <!-- Escolha de casas de apostas -->
   <div class="glass p-6 mb-6 border border-red-600/20">
-    <label class="font-bold block mb-2">Casa de Aposta</label>
-    <select class="w-full p-3 rounded bg-black border border-gray-700">
-      <option>ElephantBet</option>
-      <option>BantuBet</option>
-      <option>888Bet</option>
-      <option>TopAposta</option>
+    <label class="mb-2 block font-bold">Escolha a Casa de Aposta:</label>
+    <select id="betHouse" class="w-full p-3 rounded bg-black border border-gray-700">
+      <option value="ElephantBet">ElephantBet</option>
+      <option value="BantuBet">BantuBet</option>
+      <option value="888Bet">888Bet</option>
+      <option value="TopAposta">TopAposta</option>
     </select>
   </div>
 
-  <div class="glass p-6 mb-10 border border-red-600/20">
-    <h3 class="text-center font-bold mb-4">📊 Performance IA</h3>
+  <!-- Gráfico -->
+  <div class="glass p-6 rounded-xl border border-red-600/20">
+    <h3 class="text-center font-bold mb-4">📊 Performance IA (Histórico Real)</h3>
     <canvas id="chartPage2" height="120"></canvas>
   </div>
 
-  <!-- Upload Histórico -->
-  <div class="glass p-6 mb-6 border border-red-600/20 text-center">
-    <label class="block mb-2 font-bold">Enviar histórico Aviator</label>
-    <input type="file" id="uploadHistory" accept="image/*" class="mb-4">
-    <button class="btn-red neon-red" onclick="analyzeHistory()">📊 ANALISAR</button>
-    <p id="historyResult" class="mt-2 text-gray-300"></p>
-  </div>
-
-  <!-- LOGIN VIP (AGORA ABAIXO) -->
-  <div class="glass p-8 border border-red-600/30 text-center">
+  <!-- Acesso VIP -->
+  <div class="glass p-8 mt-10 border border-red-600/30 text-center">
     <h2 class="text-2xl font-black text-red-600 mb-4">💎 ACESSO VIP</h2>
+    <p class="text-gray-300 mb-4">Sinais ROSA de alta probabilidade • IA treinada com histórico real</p>
     <input id="vipUser" placeholder="Usuário VIP" class="w-full mb-2 p-3 rounded bg-black border border-gray-700">
     <input id="vipPass" type="password" placeholder="Senha VIP" class="w-full mb-4 p-3 rounded bg-black border border-gray-700">
     <button class="btn-red neon-red w-full" onclick="loginVIP()">🔐 ENTRAR VIP</button>
   </div>
 
+  <!-- Upload de histórico Aviator no final -->
+  <div class="glass p-6 mb-6 mt-10 border border-red-600/20 text-center">
+    <label class="block mb-2 font-bold">Enviar histórico Aviator (PNG/JPG)</label>
+    <input type="file" id="uploadHistory" accept="image/*" class="mb-4">
+    <button class="btn-red neon-red" onclick="analyzeHistory()">📊 ANALISAR</button>
+    <p id="historyResult" class="mt-2 text-gray-300"></p>
+  </div>
 </div>
 
-<!-- ========================= Página 3 VIP ========================= -->
+<!-- ========================= Página 3: VIP ========================= -->
 <div id="page3" class="hidden max-w-7xl mx-auto px-6 py-10">
-
   <h1 class="text-3xl font-black text-red-600 mb-6 text-center">💎 VIP - Sinais ROSA</h1>
 
+  <!-- Horário -->
   <div class="glass p-4 mb-6 text-center border border-red-600/20">
     <div id="clock3" class="text-red-500 font-bold"></div>
   </div>
 
+  <!-- Sinais ROSA -->
   <div id="signalsVIP" class="grid md:grid-cols-3 gap-6 my-6"></div>
 
-  <div class="glass p-6 mb-10 border border-red-600/20">
-    <h3 class="text-center font-bold mb-4">📊 Performance VIP</h3>
+  <!-- Gráfico VIP -->
+  <div class="glass p-6 rounded-xl border border-red-600/20">
+    <h3 class="text-center font-bold mb-4">📊 Performance VIP (Aviator)</h3>
     <canvas id="chartVIP" height="120"></canvas>
   </div>
 
-  <!-- Upload VIP -->
-  <div class="glass p-6 border border-red-600/20 text-center">
-    <label class="block mb-2 font-bold">Enviar histórico Aviator VIP</label>
+  <div class="glass p-6 mt-6 text-center border border-red-600/30">
+    <p class="text-gray-300">Usuário VIP: William | Passe: 230220</p>
+  </div>
+
+  <!-- Upload de histórico Aviator VIP no final -->
+  <div class="glass p-6 mb-6 mt-10 border border-red-600/20 text-center">
+    <label class="block mb-2 font-bold">Enviar histórico Aviator VIP (PNG/JPG)</label>
     <input type="file" id="uploadHistoryVIP" accept="image/*" class="mb-4">
     <button class="btn-red neon-red" onclick="analyzeHistoryVIP()">📊 ANALISAR VIP</button>
     <p id="historyResultVIP" class="mt-2 text-gray-300"></p>
   </div>
-
 </div>
 
 <script>
+// ========================= Relógios =========================
 setInterval(()=>{
-  const now=new Date().toLocaleString("pt-PT",{timeZone:"Africa/Luanda"});
-  if(clock2) clock2.innerHTML="🕐 "+now;
-  if(clock3) clock3.innerHTML="🕐 "+now;
+  const now = new Date().toLocaleString("pt-PT",{timeZone:"Africa/Luanda"});
+  if(document.getElementById("clock2")) clock2.innerHTML="🕐 "+now;
+  if(document.getElementById("clock3")) clock3.innerHTML="🕐 "+now;
 },1000);
 
+// ========================= Página 1: Login =========================
 function loginMain(){
-  if(userMain.value && passMain.value){
-    localStorage.setItem("main","1");
-    page1.classList.add("hidden");
-    page2.classList.remove("hidden");
-    updateChartPage2();
+  const u=userMain.value, p=passMain.value;
+  if(u && p){
+    localStorage.setItem("mainAccess","true");
+    document.getElementById("page1").classList.add("hidden");
+    document.getElementById("page2").classList.remove("hidden");
+    loadHistoryPage2();
   }
 }
-function logoutMain(){localStorage.clear();location.reload();}
-if(localStorage.getItem("main")) loginMain();
+function logoutMain(){
+  localStorage.removeItem("mainAccess");
+  location.reload();
+}
+if(localStorage.getItem("mainAccess")) loginMain();
 
-const vip={u:"William",p:"230220"};
-function loginVIP(){
-  if(vipUser.value===vip.u && vipPass.value===vip.p){
-    page2.classList.add("hidden");
-    page3.classList.remove("hidden");
-    generateSignalsVIP();
-  } else alert("Dados VIP incorretos");
+// ========================= Página 2: Sinais =========================
+let historyPage2 = JSON.parse(localStorage.getItem("historyPage2")||"[]");
+let chartPage2Obj;
+
+function IApage2(tipo){
+  let mult, conf;
+  if(tipo==="azul"){ mult=(1+Math.random()*0.99).toFixed(2); conf=Math.floor(60+Math.random()*35);}
+  if(tipo==="roxo"){ mult=(2+Math.random()*7.99).toFixed(2); conf=Math.floor(60+Math.random()*35);}
+  return {mult, conf};
 }
 
-let h2=JSON.parse(localStorage.getItem("h2")||"[]");
-let c2;
 function generateSignalsPage2(){
-  signalsPage2.innerHTML="";
-  ["AZUL","ROXO"].forEach(t=>{
-    let m=t==="AZUL"?(1+Math.random()).toFixed(2):(2+Math.random()*7).toFixed(2);
-    let p=60+Math.floor(Math.random()*35);
-    h2.push(p);
-    signalsPage2.innerHTML+=`<div class="signal-card glass border border-red-600/30"><h3>${t}</h3><div class="text-4xl font-black">×${m}</div><p>${p}%</p></div>`;
-  });
-  localStorage.setItem("h2",JSON.stringify(h2));
+  const tipos=[{t:"AZUL",c:"cyan"},{t:"ROXO",c:"purple"}];
+  signalsPage2.innerHTML = tipos.map(x=>{
+    let r = IApage2(x.t.toLowerCase());
+    historyPage2.push(r.conf);
+    return `<div class="signal-card glass border border-${x.c}-500/40">
+      <h3 class="font-bold text-${x.c}-400 mb-2">SINAL ${x.t}</h3>
+      <div class="text-4xl font-black text-${x.c}-300 mb-2">×${r.mult}</div>
+      <p>Probabilidade: <b>${r.conf}%</b></p>
+    </div>`;
+  }).join("");
+  localStorage.setItem("historyPage2",JSON.stringify(historyPage2));
   updateChartPage2();
 }
+
+function loadHistoryPage2(){ updateChartPage2(); }
+
 function updateChartPage2(){
-  if(c2) c2.destroy();
-  c2=new Chart(chartPage2,{type:"line",data:{labels:h2.map((_,i)=>i+1),datasets:[{data:h2,borderColor:"#dc2626",fill:true}]},options:{plugins:{legend:{display:false}}}});
+  if(historyPage2.length>50) historyPage2=historyPage2.slice(-50);
+  localStorage.setItem("historyPage2",JSON.stringify(historyPage2));
+  if(chartPage2Obj) chartPage2Obj.destroy();
+  chartPage2Obj = new Chart(chartPage2.getContext("2d"),{
+    type:"line",
+    data:{labels:historyPage2.map((_,i)=>i+1), datasets:[{data:historyPage2,borderColor:"#dc2626",backgroundColor:"rgba(220,38,38,.2)",tension:.4,fill:true}]},
+    options:{plugins:{legend:{display:false}}, scales:{y:{min:60,max:100}}}
+  });
 }
 
-let h3=[],c3;
+// ========================= VIP =========================
+const vipUserData={user:"William",pass:"230220"};
+function loginVIP(){
+  const u=vipUser.value,p=vipPass.value;
+  if(u===vipUserData.user && p===vipUserData.pass){
+    document.getElementById("page2").classList.add("hidden");
+    document.getElementById("page3").classList.remove("hidden");
+    generateSignalsVIP();
+  }else{
+    alert("Usuário ou senha VIP incorretos");
+  }
+}
+
+let historyVIP = JSON.parse(localStorage.getItem("historyVIP")||"[]");
+let chartVIPObj;
+
+function IA_VIP(){
+  let mult=(10+Math.random()*100).toFixed(2);
+  let conf=Math.floor(80+Math.random()*19); // sempre ≥80%
+  return {mult, conf};
+}
+
 function generateSignalsVIP(){
-  let m=(10+Math.random()*100).toFixed(2);
-  let p=80+Math.floor(Math.random()*20);
-  h3.push(p);
-  signalsVIP.innerHTML=`<div class="signal-card glass border border-pink-500/40"><h3>SINAL ROSA</h3><div class="text-4xl font-black">×${m}</div><p>${p}%</p></div>`;
-  if(c3) c3.destroy();
-  c3=new Chart(chartVIP,{type:"line",data:{labels:h3.map((_,i)=>i+1),datasets:[{data:h3,borderColor:"#dc2626",fill:true}]},options:{plugins:{legend:{display:false}}}});
+  signalsVIP.innerHTML = "";
+  let r = IA_VIP();
+  historyVIP.push(r.conf);
+  signalsVIP.innerHTML = `<div class="signal-card glass border border-pink-500/40">
+    <h3 class="font-bold text-pink-400 mb-2">SINAL ROSA</h3>
+    <div class="text-4xl font-black text-pink-300 mb-2">×${r.mult}</div>
+    <p>Probabilidade: <b>${r.conf}%</b></p>
+  </div>`;
+  localStorage.setItem("historyVIP",JSON.stringify(historyVIP));
+  updateChartVIP();
 }
 
-function analyzeHistory(){historyResult.innerText="Simulação: 70%";}
-function analyzeHistoryVIP(){historyResultVIP.innerText="Simulação VIP: 90%";}
-</script>
+function updateChartVIP(){
+  if(historyVIP.length>50) historyVIP=historyVIP.slice(-50);
+  localStorage.setItem("historyVIP",JSON.stringify(historyVIP));
+  if(chartVIPObj) chartVIPObj.destroy();
+  chartVIPObj = new Chart(chartVIP.getContext("2d"),{
+    type:"line",
+    data:{labels:historyVIP.map((_,i)=>i+1), datasets:[{data:historyVIP,borderColor:"#dc2626",backgroundColor:"rgba(220,38,38,.2)",tension:.4,fill:true}]},
+    options:{plugins:{legend:{display:false}}, scales:{y:{min:60,max:100}}}
+  });
+}
 
+// ========================= Upload Simulado =========================
+function analyzeHistory(){
+  const file=document.getElementById("uploadHistory").files[0];
+  if(file){historyResult.innerHTML="Simulação: chance de acerto 70%";}else{historyResult.innerHTML="Nenhum arquivo selecionado";}
+}
+function analyzeHistoryVIP(){
+  const file=document.getElementById("uploadHistoryVIP").files[0];
+  if(file){historyResultVIP.innerHTML="Simulação VIP: chance de acerto 90%";}else{historyResultVIP.innerHTML="Nenhum arquivo selecionado";}
+}
+</script>
 </body>
-</html>
+    </html>
