Update BACKEND_URL to new endpoint

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 /** =========================================================
  *  CONFIG
  *  ========================================================= */
-const BACKEND_URL = "COLE_AQUI_SEU_URL_DO_RENDER"; // ex: https://meuapp.onrender.com
+const BACKEND_URL = "const BACKEND_URL = "https://willboot-backend-1.onrender.com";
+
 
 /** =========================================================
  *  Relógios
