--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 </head>
 <body>
 
-<!-- ========================= Página 1: Acesso ao Site ========================= -->
 <div id="page1" class="min-h-screen flex items-center justify-center">
   <div class="glass p-10 w-full max-w-md border border-red-600/30">
     <h1 class="text-3xl font-black text-red-600 mb-6 text-center">WILLBOOT-PRO</h1>
@@ -30,9 +29,7 @@
   </div>
 </div>
 
-<!-- ========================= Página 2: Dashboard Normal ========================= -->
 <div id="page2" class="hidden max-w-7xl mx-auto px-6 py-10">
-  <!-- Header -->
   <div class="glass p-6 flex flex-col md:flex-row justify-between items-center border border-red-600/20 mb-6">
     <div id="clock2" class="text-red-500 font-bold"></div>
     <div class="flex gap-4 mt-4 md:mt-0">
@@ -41,10 +38,8 @@
     </div>
   </div>
 
-  <!-- Sinais -->
   <div id="signalsPage2" class="grid md:grid-cols-3 gap-6 my-10"></div>
 
-  <!-- Escolha de casas de apostas -->
   <div class="glass p-6 mb-6 border border-red-600/20">
     <label class="mb-2 block font-bold">Escolha a Casa de Aposta:</label>
     <select id="betHouse" class="w-full p-3 rounded bg-black border border-gray-700">
@@ -55,13 +50,11 @@
     </select>
   </div>
 
-  <!-- Gráfico -->
   <div class="glass p-6 rounded-xl border border-red-600/20">
     <h3 class="text-center font-bold mb-4">📊 Performance IA (Histórico Real)</h3>
     <canvas id="chartPage2" height="120"></canvas>
   </div>
 
-  <!-- Acesso VIP -->
   <div class="glass p-8 mt-10 border border-red-600/30 text-center">
     <h2 class="text-2xl font-black text-red-600 mb-4">💎 ACESSO VIP</h2>
     <p class="text-gray-300 mb-4">Sinais ROSA de alta probabilidade • IA treinada com histórico real</p>
@@ -70,7 +63,6 @@
     <button class="btn-red neon-red w-full" onclick="loginVIP()">🔐 ENTRAR VIP</button>
   </div>
 
-  <!-- Upload de histórico Aviator no final -->
   <div class="glass p-6 mb-6 mt-10 border border-red-600/20 text-center">
     <label class="block mb-2 font-bold">Enviar histórico Aviator (PNG/JPG)</label>
     <input type="file" id="uploadHistory" accept="image/*" class="mb-4">
@@ -79,29 +71,19 @@
   </div>
 </div>
 
-<!-- ========================= Página 3: VIP ========================= -->
 <div id="page3" class="hidden max-w-7xl mx-auto px-6 py-10">
   <h1 class="text-3xl font-black text-red-600 mb-6 text-center">💎 VIP - Sinais ROSA</h1>
-
-  <!-- Horário -->
   <div class="glass p-4 mb-6 text-center border border-red-600/20">
     <div id="clock3" class="text-red-500 font-bold"></div>
   </div>
-
-  <!-- Sinais ROSA -->
   <div id="signalsVIP" class="grid md:grid-cols-3 gap-6 my-6"></div>
-
-  <!-- Gráfico VIP -->
   <div class="glass p-6 rounded-xl border border-red-600/20">
     <h3 class="text-center font-bold mb-4">📊 Performance VIP (Aviator)</h3>
     <canvas id="chartVIP" height="120"></canvas>
   </div>
-
   <div class="glass p-6 mt-6 text-center border border-red-600/30">
     <p class="text-gray-300">Usuário VIP: William | Passe: 230220</p>
   </div>
-
-  <!-- Upload de histórico Aviator VIP no final -->
   <div class="glass p-6 mb-6 mt-10 border border-red-600/20 text-center">
     <label class="block mb-2 font-bold">Enviar histórico Aviator VIP (PNG/JPG)</label>
     <input type="file" id="uploadHistoryVIP" accept="image/*" class="mb-4">
@@ -112,25 +94,27 @@
 
 <script>
 /** =========================================================
- *  CONFIG
- *  ========================================================= */
-const BACKEND_URL = "const BACKEND_URL = "https://willboot-backend-1.onrender.com";
-
+ * CONFIG - CORRIGIDO
+ * ========================================================= */
+const BACKEND_URL = "https://willboot-backend-1.onrender.com";
 
 /** =========================================================
- *  Relógios
- *  ========================================================= */
+ * Relógios
+ * ========================================================= */
 setInterval(()=>{
   const now = new Date().toLocaleString("pt-PT",{timeZone:"Africa/Luanda"});
-  if(document.getElementById("clock2")) clock2.innerHTML="🕐 "+now;
-  if(document.getElementById("clock3")) clock3.innerHTML="🕐 "+now;
+  const c2 = document.getElementById("clock2");
+  const c3 = document.getElementById("clock3");
+  if(c2) c2.innerHTML="🕐 "+now;
+  if(c3) c3.innerHTML="🕐 "+now;
 },1000);
 
 /** =========================================================
- *  Login
- *  ========================================================= */
+ * Login
+ * ========================================================= */
 function loginMain(){
-  const u=userMain.value, p=passMain.value;
+  const u=document.getElementById("userMain").value;
+  const p=document.getElementById("passMain").value;
   if(u && p){
     localStorage.setItem("mainAccess","true");
     document.getElementById("page1").classList.add("hidden");
@@ -142,11 +126,14 @@ function logoutMain(){
   localStorage.removeItem("mainAccess");
   location.reload();
 }
-if(localStorage.getItem("mainAccess")) loginMain();
+if(localStorage.getItem("mainAccess")) {
+    document.getElementById("page1").classList.add("hidden");
+    document.getElementById("page2").classList.remove("hidden");
+}
 
 /** =========================================================
- *  Helpers para ler JSON do backend (compatível com chaves diferentes)
- *  ========================================================= */
+ * Helpers e Gráficos
+ * ========================================================= */
 function pick(obj, keys, fallback=null){
   for(const k of keys){
     if(obj && Object.prototype.hasOwnProperty.call(obj, k) && obj[k] !== undefined && obj[k] !== null) return obj[k];
@@ -155,21 +142,13 @@ function pick(obj, keys, fallback=null){
 }
 
 function normalizeAnalyzeResponse(data){
-  // tenta achar o "analysis" em vários formatos possíveis
   const analysis = pick(data, ["analysis","analise","result","resultado"], {}) || {};
-
-  // sinal (AZUL/ROXO/ROSA) pode vir em vários nomes
   let sinal = String(pick(analysis, ["sinal","signal","tipo","type"], pick(data, ["sinal","signal"], "")) || "").toUpperCase().trim();
-
-  // percentuais podem vir com ou sem % no nome
   const azul = Number(pick(analysis, ["azul_%","azul","blue","p_azul","pct_azul"], null));
   const roxo = Number(pick(analysis, ["roxo_%","roxo","purple","p_roxo","pct_roxo"], null));
   const rosa = Number(pick(analysis, ["rosa_%","rosa","pink","p_rosa","pct_rosa"], null));
-
-  // total
   const total = Number(pick(data, ["total","count","qtd","quantidade"], null));
 
-  // fallback: se não veio sinal, decide pelo maior percentual (se existir)
   if(!sinal){
     const candidates = [
       {t:"AZUL", v: isFinite(azul) ? azul : -1},
@@ -179,30 +158,19 @@ function normalizeAnalyzeResponse(data){
     if(candidates[0].v >= 0) sinal = candidates[0].t;
   }
 
-  // confiabilidade: se existir, usa; se não, usa o percentual do sinal como "conf"
   const confFromBackend = Number(pick(analysis, ["conf","confianca","confidence","probabilidade","prob"], pick(data, ["conf","confianca"], null)));
   let conf = isFinite(confFromBackend) ? confFromBackend : null;
-
   if(conf === null){
-    if(sinal === "AZUL" && isFinite(azul)) conf = azul;
-    if(sinal === "ROXO" && isFinite(roxo)) conf = roxo;
-    if(sinal === "ROSA" && isFinite(rosa)) conf = rosa;
+    if(sinal === "AZUL") conf = azul;
+    if(sinal === "ROXO") conf = roxo;
+    if(sinal === "ROSA") conf = rosa;
   }
-
-  // multiplo (se o backend mandar)
   const mult = pick(analysis, ["mult","multiplo","multiplier","x"], pick(data, ["mult","multiplo"], null));
-
   return { total, sinal, azul, roxo, rosa, conf, mult, raw:data };
 }
 
-function formatPct(n){
-  if(!isFinite(n)) return "-";
-  return String(Math.round(n));
-}
+function formatPct(n){ return isFinite(n) ? String(Math.round(n)) : "-"; }
 
-/** =========================================================
- *  Gráficos (histórico real)
- *  ========================================================= */
 let historyPage2 = JSON.parse(localStorage.getItem("historyPage2")||"[]");
 let chartPage2Obj;
 
@@ -211,8 +179,9 @@ function loadHistoryPage2(){ updateChartPage2(); }
 function updateChartPage2(){
   if(historyPage2.length>50) historyPage2=historyPage2.slice(-50);
   localStorage.setItem("historyPage2",JSON.stringify(historyPage2));
+  const ctx = document.getElementById("chartPage2").getContext("2d");
   if(chartPage2Obj) chartPage2Obj.destroy();
-  chartPage2Obj = new Chart(chartPage2.getContext("2d"),{
+  chartPage2Obj = new Chart(ctx,{
     type:"line",
     data:{
       labels:historyPage2.map((_,i)=>i+1),
@@ -229,26 +198,25 @@ function updateChartPage2(){
 }
 
 /** =========================================================
- *  PASSO 3 — Sinais reais (substitui simulação)
- *  - Agora "GERAR SINAIS" usa o último resultado do /analyze
- *  ========================================================= */
+ * Sinais e VIP
+ * ========================================================= */
 let lastAnalyze = null;
 
 function renderSignalsFromAnalyzeOnPage2(info){
-  // cria 3 cards (AZUL/ROXO/ROSA) com percentuais, e destaca o sinal recomendado
+  const signalsContainer = document.getElementById("signalsPage2");
   const cards = [
     {t:"AZUL", c:"cyan", pct: info.azul, mult: info.mult},
     {t:"ROXO", c:"purple", pct: info.roxo, mult: info.mult},
     {t:"ROSA", c:"pink", pct: info.rosa, mult: info.mult},
   ];
 
-  signalsPage2.innerHTML = cards.map(x=>{
+  signalsContainer.innerHTML = cards.map(x=>{
     const recommended = (info.sinal === x.t);
-    const border = recommended ? `border-${x.c}-500/80` : `border-${x.c}-500/30`;
+    const border = recommended ? `border-red-500/80` : `border-gray-700/30`;
     const glow = recommended ? `style="box-shadow:0 0 25px rgba(220,38,38,.15);"` : "";
     return `<div class="signal-card glass border ${border}" ${glow}>
-      <h3 class="font-bold text-${x.c}-400 mb-2">${recommended ? "✅ " : ""}SINAL ${x.t}</h3>
-      <div class="text-4xl font-black text-${x.c}-300 mb-2">×${x.mult ?? "--"}</div>
+      <h3 class="font-bold text-gray-300 mb-2">${recommended ? "✅ " : ""}SINAL ${x.t}</h3>
+      <div class="text-4xl font-black text-white mb-2">×${x.mult ?? "--"}</div>
       <p>Probabilidade: <b>${formatPct(x.pct)}%</b></p>
     </div>`;
   }).join("");
@@ -256,26 +224,21 @@ function renderSignalsFromAnalyzeOnPage2(info){
 
 function generateSignalsPage2(){
   if(!lastAnalyze){
-    signalsPage2.innerHTML = `<div class="glass p-6 border border-red-600/20 text-center text-gray-300">
-      Envie um histórico (PNG/JPG) e clique <b>ANALISAR</b> para gerar sinais reais.
+    document.getElementById("signalsPage2").innerHTML = `<div class="glass p-6 border border-red-600/20 text-center text-gray-300 w-full col-span-3">
+      Envie um histórico (PNG/JPG) e clique em <b>ANALISAR</b>.
     </div>`;
     return;
   }
   renderSignalsFromAnalyzeOnPage2(lastAnalyze);
-
-  // Atualiza gráfico com "conf" (0-100). Se não existir, usa 0.
   const confValue = isFinite(lastAnalyze.conf) ? Math.max(0, Math.min(100, Number(lastAnalyze.conf))) : 0;
   historyPage2.push(confValue);
-  localStorage.setItem("historyPage2",JSON.stringify(historyPage2));
   updateChartPage2();
 }
 
-/** =========================================================
- *  VIP — Reutiliza o mesmo /analyze, mas exibe apenas ROSA e atualiza chart VIP
- *  ========================================================= */
 const vipUserData={user:"William",pass:"230220"};
 function loginVIP(){
-  const u=vipUser.value,p=vipPass.value;
+  const u=document.getElementById("vipUser").value;
+  const p=document.getElementById("vipPass").value;
   if(u===vipUserData.user && p===vipUserData.pass){
     document.getElementById("page2").classList.add("hidden");
     document.getElementById("page3").classList.remove("hidden");
@@ -291,8 +254,9 @@ let chartVIPObj;
 function updateChartVIP(){
   if(historyVIP.length>50) historyVIP=historyVIP.slice(-50);
   localStorage.setItem("historyVIP",JSON.stringify(historyVIP));
+  const ctx = document.getElementById("chartVIP").getContext("2d");
   if(chartVIPObj) chartVIPObj.destroy();
-  chartVIPObj = new Chart(chartVIP.getContext("2d"),{
+  chartVIPObj = new Chart(ctx,{
     type:"line",
     data:{
       labels:historyVIP.map((_,i)=>i+1),
@@ -309,96 +273,61 @@ function updateChartVIP(){
 }
 
 function generateSignalsVIP(){
+  const signalsVIPContainer = document.getElementById("signalsVIP");
   if(!lastAnalyze){
-    signalsVIP.innerHTML = `<div class="glass p-6 border border-red-600/20 text-center text-gray-300">
-      Envie um histórico VIP e clique <b>ANALISAR VIP</b> para gerar sinal real.
+    signalsVIPContainer.innerHTML = `<div class="glass p-6 border border-red-600/20 text-center text-gray-300 w-full col-span-3">
+      Envie um histórico VIP e clique em <b>ANALISAR VIP</b>.
     </div>`;
     updateChartVIP();
     return;
   }
-
   const mult = lastAnalyze.mult ?? "--";
   const conf = isFinite(lastAnalyze.rosa) ? lastAnalyze.rosa : (isFinite(lastAnalyze.conf) ? lastAnalyze.conf : 0);
-
-  signalsVIP.innerHTML = `<div class="signal-card glass border border-pink-500/60">
-    <h3 class="font-bold text-pink-400 mb-2">SINAL ROSA (REAL)</h3>
+  signalsVIPContainer.innerHTML = `<div class="signal-card glass border border-pink-500/60 col-span-3">
+    <h3 class="font-bold text-pink-400 mb-2">SINAL ROSA (IA)</h3>
     <div class="text-4xl font-black text-pink-300 mb-2">×${mult}</div>
     <p>Probabilidade: <b>${formatPct(conf)}%</b></p>
   </div>`;
-
-  const confValue = isFinite(conf) ? Math.max(0, Math.min(100, Number(conf))) : 0;
-  historyVIP.push(confValue);
-  localStorage.setItem("historyVIP",JSON.stringify(historyVIP));
+  historyVIP.push(conf);
   updateChartVIP();
 }
 
 /** =========================================================
- *  Upload real (Render/FastAPI) + tratamento de erros
- *  ========================================================= */
+ * Upload e Análise
+ * ========================================================= */
 async function postAnalyze(file){
   const formData = new FormData();
   formData.append("file", file);
-
-  const res = await fetch(`${BACKEND_URL}/analyze`, {
-    method: "POST",
-    body: formData
-  });
-
-  if(!res.ok){
-    const txt = await res.text().catch(()=> "");
-    throw new Error(`HTTP ${res.status} - ${txt || "Erro ao chamar /analyze"}`);
-  }
+  const res = await fetch(`${BACKEND_URL}/analyze`, { method: "POST", body: formData });
+  if(!res.ok) throw new Error(`Erro: ${res.status}`);
   return await res.json();
 }
 
 async function analyzeHistory(){
   const file = document.getElementById("uploadHistory").files[0];
-  if(!file){ historyResult.innerHTML = "Nenhum arquivo selecionado"; return; }
-
-  historyResult.innerHTML = "Analisando... aguarde.";
-
+  const resDiv = document.getElementById("historyResult");
+  if(!file){ resDiv.innerHTML = "Selecione um arquivo"; return; }
+  resDiv.innerHTML = "Analisando...";
   try{
     const data = await postAnalyze(file);
-    const info = normalizeAnalyzeResponse(data);
-    lastAnalyze = info;
-
-    historyResult.innerHTML = `
-      Total: ${info.total ?? "-"} <br>
-      Sinal (backend): <b>${info.sinal || "-"}</b> <br>
-      Azul: ${formatPct(info.azul)}%, Roxo: ${formatPct(info.roxo)}%, Rosa: ${formatPct(info.rosa)}%
-    `;
-
-    // após analisar, já gera sinais reais e atualiza gráfico
+    lastAnalyze = normalizeAnalyzeResponse(data);
+    resDiv.innerHTML = `Sinal: <b>${lastAnalyze.sinal}</b> | Confiança: ${formatPct(lastAnalyze.conf)}%`;
     generateSignalsPage2();
-
-  }catch(err){
-    historyResult.innerHTML = `Falha: ${err.message}<br><span class="text-gray-400">Dica: isso costuma ser CORS ou URL errado.</span>`;
-  }
+  }catch(err){ resDiv.innerHTML = "Erro na conexão com o servidor."; }
 }
 
 async function analyzeHistoryVIP(){
   const file = document.getElementById("uploadHistoryVIP").files[0];
-  if(!file){ historyResultVIP.innerHTML = "Nenhum arquivo selecionado"; return; }
-
-  historyResultVIP.innerHTML = "Analisando VIP... aguarde.";
-
+  const resDiv = document.getElementById("historyResultVIP");
+  if(!file){ resDiv.innerHTML = "Selecione um arquivo"; return; }
+  resDiv.innerHTML = "Analisando VIP...";
   try{
     const data = await postAnalyze(file);
-    const info = normalizeAnalyzeResponse(data);
-    lastAnalyze = info;
-
-    historyResultVIP.innerHTML = `
-      Total: ${info.total ?? "-"} <br>
-      Sinal (backend): <b>${info.sinal || "-"}</b> <br>
-      Azul: ${formatPct(info.azul)}%, Roxo: ${formatPct(info.roxo)}%, Rosa: ${formatPct(info.rosa)}%
-    `;
-
+    lastAnalyze = normalizeAnalyzeResponse(data);
+    resDiv.innerHTML = `Sinal: <b>${lastAnalyze.sinal}</b> | Rosa: ${formatPct(lastAnalyze.rosa)}%`;
     generateSignalsVIP();
-
-  }catch(err){
-    historyResultVIP.innerHTML = `Falha: ${err.message}<br><span class="text-gray-400">Dica: isso costuma ser CORS ou URL errado.</span>`;
-  }
+  }catch(err){ resDiv.innerHTML = "Erro na conexão VIP."; }
 }
 </script>
 </body>
-      </html>
+</html>
